fix: bei Inhalt nur x-overflow clippen -> y-overflow möglich

--- a/css/inhalt/inhalt.css
+++ b/css/inhalt/inhalt.css
@@ -61,7 +61,7 @@
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-	overflow: hidden;
+	overflow-x: clip;
 	position: relative;
 }
 
